# candide-contracts

./: .env.example  .env.sample  .gitignore  .gitmodules  .prettierrc  .solcover.js  .solhint.json  LICENSE  README.md  brownie-config.yaml  deployments.ts  foundry.toml  funding.json  hardhat.config.ts  package.json  pyproject.toml  tsconfig.json  tsconfig.prod.json
.github/workflows/: action.yml  certora_recovery.yml  test_contracts.yml
certora/: requirements.txt
certora/conf/: GuardianManager.conf  GuardianStorage.conf  RecoveryConfirmationSignatureValidity.conf  RecoveryModule.conf  SocialRecoveryModule.conf
certora/harnesses/: GuardianStorageHarness.sol  SafeHarness.sol  SocialRecoveryModuleHarness.sol
certora/scripts/: verifyRecoveryModule.sh
certora/specs/: GuardianManager.spec  GuardianStorage.spec  RecoveryConfirmationSignatureValidity.spec  RecoveryModule.spec  SocialRecoveryModule.spec
docs/: call_trace.txt
interfaces/: EntryPoint.sol  IAccount.sol  IAggregatedAccount.sol  IAggregatedWallet.sol  IAggregator.sol  IAggregatorMultisig.sol  IBLSAccount.sol  IBLSAccountMultisig.sol  IBLSWallet.sol  IEntryPoint.sol  IInsurance.sol  IOracle.sol  IPaymaster.sol  IStakeManager.sol  IWallet.sol  StakeManager.sol  UserOperation.sol
scripts/: deploy.py
test/: GuardianStorage.spec.ts  SocialRecoveryModule.spec.ts
tests/: EntryPoint.json  conftest.py  testBLSUtils.py  testUtils.py  test_bls.py  test_bls_multisig.py  test_bundler.py  test_candideWallet.py  test_fees.py  test_gnosisWallet.py  test_simpleWallet.py  test_socialRecoveryModule.py
(+69 files in other folders)
