[tool.poetry]
name = "candidewalletcontracts"
version = "0.1.1_beta"
description = "Smart contracts used by Candide Wallet"
authors = ["Candide Wallet Team"]
license = "GPL3"
readme = "README.md"
homepage = "http://candidewallet.com"
repository = "https://github.com/candidelabs/CandideWalletContracts"

[tool.poetry.dependencies]
python = ">3.7.0,<3.7.1 || >3.7.1,<3.11"
eth-brownie = "^1.19.2"
brownie-token-tester = "^0.3.2"
py_ecc = "^5.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"